Fix KDEPlatformFileDialogHelper::selectedNameFilter

Directly return dialog->selectedNameFilter instead of the current nonsense

BUG: 481287
(cherry picked from commit 8944e255e4dcd41279c2bd04432d5a933fb0823f)